--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- navbar end -->
 
         <!-- slider section start -->
-        <section class="container">
+        <section class="container mt-4">
             <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
                 <!-- <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -64,7 +64,7 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div> -->
-                <div class="carousel-inner">
+                <div class="carousel-inner mb-5">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
