--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <section>
             <nav class="navbar navbar-expand-lg">
                 <div class="container mt-4">
-                    <a class="navbar-brand fw-bold fs-1 text-primary" href="#">Learnlab</a>
+                    <a class="navbar-brand fw-bold fs-1 text-info" href="#">Learnlab</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                        <ul class="navbar-nav m-auto mb-2 mb-lg-0 fw-semibold">
+                        <ul class="navbar-nav m-auto mb-2 mb-lg-0 fw-normal">
                             <li class="nav-item">
                                 <a class="nav-link active px-4 " aria-current="page" href="#">Home</a>
                             </li>
@@ -45,8 +45,7 @@
                                 <a class="nav-link" aria-current="page" href="#">Register</a>
                             </li>
                         </ul>
-                        <button class="btn btn-outline-primary col-2 fw-bold fs-5 border border-primary border-3"
-                            type="button">Register</button>
+                        <button class="btn btn-outline-info fw-semibold fs-5 rounded-1" type="button">Register</button>
                     </div>
                 </div>
             </nav>
@@ -64,14 +63,16 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div> -->
-                <div class="carousel-inner mb-5">
+                <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h1 class="fw-bold">Get Started Digital Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
+                            <p class="mt-2">It is a long established fact that a reader will be distracted by the
+                                readable
+                                content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-primary fw-normal" type="button">Get
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 mt-2" type="button">Get
                                 Started</button>
                         </div>
                     </div>
@@ -81,7 +82,7 @@
                             <h1 class="fw-bold">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-primary fw-normal" type="button">Get
+                            <button class="btn btn-lg btn-info text-white fw-normal" type="button">Get
                                 Started</button>
                         </div>
                     </div>
@@ -91,7 +92,7 @@
                             <h1 class="fw-bold">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-primary fw-normal" type="button">Get
+                            <button class="btn btn-lg btn-info text-white fw-normal" type="button">Get
                                 Started</button>
                         </div>
                     </div>
@@ -112,6 +113,93 @@
     </header>
 
     <main>
+        <!-- courses section start -->
+
+        <section class="container">
+            <div class="flex-column text-center">
+                <h2 class="fs-1 fw-bold mt-4">
+                    Discover Our Popular
+                    Courses
+                </h2>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-6 justify-content-center">
+                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                        <img src="images/course/course-1.png" alt="">
+                        <div class="ms-4 me-4">
+                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h5 class="text-info fw-bold">Price : 20$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 justify-content-center">
+                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                        <img src="images/course/course-2.png" alt="">
+                        <div class="ms-4 me-4">
+                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h5 class="text-info fw-bold">Price : 20$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 justify-content-center">
+                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                        <img src="images/course/course-3.png" alt="">
+                        <div class="ms-4 me-4">
+                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h5 class="text-info fw-bold">Price : 20$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 justify-content-center">
+                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                        <img src="images/course/course-4.png" alt="">
+                        <div class="ms-4 me-4">
+                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h5 class="text-info fw-bold">Price : 20$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 justify-content-center">
+                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                        <img src="images/course/course-5.png" alt="">
+                        <div class="ms-4 me-4">
+                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h5 class="text-info fw-bold">Price : 20$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 justify-content-center">
+                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                        <img src="images/course/course-6.png" alt="">
+                        <div class="ms-4 me-4">
+                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <h5 class="text-info fw-bold">Price : 20$</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-column text-center mt-4">
+                    <button class="btn btn-lg btn-info text-white fw-normal" type="button">See More Courses</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- courses section end -->
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
