--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Learnlab</title>
+    <title> Learnlab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="custom.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="48x48" href="images/favicon.jpg">
 </head>
 
 <body>
+    <!-- header section start -->
     <header>
         <!-- navbar start -->
         <section>
@@ -45,7 +47,8 @@
                                 <a class="nav-link" aria-current="page" href="#">Register</a>
                             </li>
                         </ul>
-                        <button class="btn btn-outline-info fw-semibold fs-5 rounded-1" type="button">Register</button>
+                        <button class="btn btn-outline-info fw-semibold fs-5 rounded-1 px-4"
+                            type="button">Register</button>
                     </div>
                 </div>
             </nav>
@@ -67,32 +70,36 @@
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
-                            <h1 class="fw-bold">Get Started Digital Learning</h1>
-                            <p class="mt-2">It is a long established fact that a reader will be distracted by the
+                            <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the
                                 readable
                                 content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 mt-2" type="button">Get
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-2 px-4"
+                                type="button">Get
                                 Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
-                            <h1 class="fw-bold">Get Started Digital Learning</h1>
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
+                            <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the
+                                readable content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-info text-white fw-normal" type="button">Get
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-2 px-4"
+                                type="button">Get
                                 Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
-                            <h1 class="fw-bold">Get Started Digital Learning</h1>
+                            <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-info text-white fw-normal" type="button">Get
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-2 px-4"
+                                type="button">Get
                                 Started</button>
                         </div>
                     </div>
@@ -111,13 +118,15 @@
         </section>
         <!-- slider section end -->
     </header>
+    <!-- header section end -->
 
+
+    <!-- main section start -->
     <main>
         <!-- courses section start -->
-
         <section class="container">
-            <div class="flex-column text-center">
-                <h2 class="fs-1 fw-bold mt-4">
+            <div class="flex-column text-center my-5 pt-5">
+                <h2 class="fw-bold fs-1 mt-5">
                     Discover Our Popular
                     Courses
                 </h2>
@@ -128,7 +137,7 @@
             </div>
             <div class="row">
                 <div class="col-6 justify-content-center">
-                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                    <div class="d-flex text-start border rounded align-items-center">
                         <img src="images/course/course-1.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
@@ -139,10 +148,10 @@
                     </div>
                 </div>
                 <div class="col-6 justify-content-center">
-                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                    <div class="d-flex text-start border rounded align-items-center">
                         <img src="images/course/course-2.png" alt="">
                         <div class="ms-4 me-4">
-                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <h3 class="fs-4 fw-bold">Javascript Basic to advanced</h3>
                             <p>Some quick example text to build on the card title
                                 and make up the bulk of the card.</p>
                             <h5 class="text-info fw-bold">Price : 20$</h5>
@@ -153,7 +162,7 @@
                     <div class="d-flex mt-4 text-start border rounded align-items-center">
                         <img src="images/course/course-3.png" alt="">
                         <div class="ms-4 me-4">
-                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <h3 class="fs-4 fw-bold">Fullstack Web Development</h3>
                             <p>Some quick example text to build on the card title
                                 and make up the bulk of the card.</p>
                             <h5 class="text-info fw-bold">Price : 20$</h5>
@@ -164,7 +173,7 @@
                     <div class="d-flex mt-4 text-start border rounded align-items-center">
                         <img src="images/course/course-4.png" alt="">
                         <div class="ms-4 me-4">
-                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <h3 class="fs-4 fw-bold">Digital Marketing</h3>
                             <p>Some quick example text to build on the card title
                                 and make up the bulk of the card.</p>
                             <h5 class="text-info fw-bold">Price : 20$</h5>
@@ -175,7 +184,7 @@
                     <div class="d-flex mt-4 text-start border rounded align-items-center">
                         <img src="images/course/course-5.png" alt="">
                         <div class="ms-4 me-4">
-                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <h3 class="fs-4 fw-bold">Photography Basic Rules</h3>
                             <p>Some quick example text to build on the card title
                                 and make up the bulk of the card.</p>
                             <h5 class="text-info fw-bold">Price : 20$</h5>
@@ -186,22 +195,119 @@
                     <div class="d-flex mt-4 text-start border rounded align-items-center">
                         <img src="images/course/course-6.png" alt="">
                         <div class="ms-4 me-4">
-                            <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
+                            <h3 class="fs-4 fw-bold">Motion Graphics</h3>
                             <p>Some quick example text to build on the card title
                                 and make up the bulk of the card.</p>
                             <h5 class="text-info fw-bold">Price : 20$</h5>
                         </div>
                     </div>
                 </div>
-                <div class="flex-column text-center mt-4">
-                    <button class="btn btn-lg btn-info text-white fw-normal" type="button">See More Courses</button>
+                <div class="flex-column text-center my-5">
+                    <button class="btn btn-lg btn-info text-white fw-normal rounded-1 px-4" type="button">See More
+                        Courses</button>
                 </div>
             </div>
         </section>
-
         <!-- courses section end -->
 
+
+        <!-- frequenty section start -->
+        <section>
+            <div>
+                <div class="flex-column text-center my-5 pt-5">
+                    <h2 class="fs-1 fw-bold">
+                        Frequently Asked Questions
+                    </h2>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable
+                        content of a page when looking at its layout.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item rounded-1 mb-3">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button collapsed fw-bold p-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                                    aria-controls="collapseOne">
+                                    What is the css box model?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    In CSS, the term "box model" is used when talking about design and layout.
+
+                                    The CSS box model is essentially a box that wraps around every HTML element. It
+                                    consists of: margins, borders, padding, and the actual content.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item rounded-1 mb-3">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed fw-bold p-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo">
+                                    What is the css box model?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    In CSS, the term "box model" is used when talking about design and layout.
+
+                                    The CSS box model is essentially a box that wraps around every HTML element. It
+                                    consists of: margins, borders, padding, and the actual content.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item rounded-1 mb-5">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed fw-bold p-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                    aria-controls="collapseThree">
+                                    What is the css box model?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    In CSS, the term "box model" is used when talking about design and layout.
+
+                                    The CSS box model is essentially a box that wraps around every HTML element. It
+                                    consists of: margins, borders, padding, and the actual content.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- frequenty section end -->
+
+        <!-- Trusted by section start -->
+        <section class="container">
+            <div class="py-5 mt-5">
+                <div class="flex-column text-center mt-4">
+                    <h2 class="fs-1 fw-bold">Trusted by over 800+ companies</h2>
+                </div>
+                <div class="text-center d-flex justify-content-between mt-5">
+                    <img src="images/company/company-1.png" alt="">
+                    <img src="images/company/company-2.png" alt="">
+                    <img src="images/company/company-3.png" alt="">
+                    <img src="images/company/company-4.png" alt="">
+                    <img src="images/company/company-5.png" alt="">
+                    <img src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Trusted by section end -->
     </main>
+    <!-- main section end -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
