--- a/index.html
+++ b/index.html
@@ -203,26 +203,43 @@
                     </div>
                 </div>
                 <div class="flex-column text-center my-5">
-                    <button class="btn btn-lg btn-info text-white fw-normal rounded-1 px-4" type="button">See More
+                    <button class="btn btn-lg btn-info text-white fw-normal rounded-1 px-5" type="button">See More
                         Courses</button>
                 </div>
             </div>
         </section>
         <!-- courses section end -->
 
-
-        <!-- frequenty section start -->
-        <section>
-            <div>
-                <div class="flex-column text-center my-5 pt-5">
-                    <h2 class="fs-1 fw-bold">
-                        Frequently Asked Questions
-                    </h2>
-                    <p>
-                        It is a long established fact that a reader will be distracted by the readable
-                        content of a page when looking at its layout.
-                    </p>
+        <!-- Ready to join start -->
+        <section class="container">
+            <div class="row">
+                <div class="d-flex my-5 py-5">
+                    <div class="p-5 bg-info text-white rounded-start">
+                        <div class="ms-4 my-4">
+                            <h2>Ready to join?</h2>
+                            <p>It is a long established fact that a reader will be distracted by the
+                                readable content of a page when looking at its layout</p>
+                        </div>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end align-items-center p-5 bg-info text-white rounded-end">
+                        <button class="btn btn-lg btn-light text-info fw-normal rounded-1 px-4 me-4"
+                            type="button">Register Now</button>
+                    </div>
                 </div>
+            </div>
+        </section>
+        <!-- Ready to join end -->
+
+        <!-- FAQ section start -->
+        <section class="container">
+            <div class="flex-column text-center my-5 pt-5">
+                <h2 class="fs-1 fw-bold">
+                    Frequently Asked Questions
+                </h2>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.
+                </p>
             </div>
 
             <div class="row justify-content-center">
@@ -230,7 +247,7 @@
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item rounded-1 mb-3">
                             <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed fw-bold p-4" type="button"
+                                <button class="accordion-button collapsed fw-bold p-4 border-0" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
                                     aria-controls="collapseOne">
                                     What is the css box model?
@@ -286,15 +303,15 @@
                 </div>
             </div>
         </section>
-        <!-- frequenty section end -->
+        <!-- FAQ section end -->
 
         <!-- Trusted by section start -->
         <section class="container">
-            <div class="py-5 mt-5">
+            <div class="py-5 my-5">
                 <div class="flex-column text-center mt-4">
                     <h2 class="fs-1 fw-bold">Trusted by over 800+ companies</h2>
                 </div>
-                <div class="text-center d-flex justify-content-between mt-5">
+                <div class="text-center d-flex justify-content-between align-items-center mt-5">
                     <img src="images/company/company-1.png" alt="">
                     <img src="images/company/company-2.png" alt="">
                     <img src="images/company/company-3.png" alt="">
@@ -311,6 +328,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/818c029dc2.js" crossorigin="anonymous"></script>
 </body>
+<footer
+    class="container-fluid text-center bg-dark text-white py-5 d-flex align-items-center justify-content-center flex-column">
+    <div class="mt-5 mb-3">
+        <h2>Learnlab</h2>
+        <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
+        <a class="text-white text-decoration-none" href="#">Privacy Ploicy</a>
+        <a class="text-white text-decoration-none" href="#">Terms of use</a>
+    </div>
+    <div class="mb-5">
+        <!-- Facebook -->
+        <a class="text-white fs-4 px-2" href=""><i class="fab fa-facebook-f"></i></a>
+
+        <!-- Linkedin -->
+        <a class="text-white fs-4 px-2" href=""><i class="fab fa-linkedin-in"></i></a>
+
+        <!-- Slack -->
+        <a class="text-white fs-4 px-2" href=""><i class="fab fa-slack-hash"></i></a>
+
+        <!-- Github -->
+        <a class="text-white fs-4 px-2" href=""><i class="fab fa-github"></i></a>
+
+        <!-- Reddit -->
+        <a class="text-white fs-4 px-2" href=""><i class="fab fa-reddit-alien"></i></a>
+    </div>
+</footer>
 
 </html>
