--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 readable
                                 content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-2 px-4"
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-lg-2 px-4 my-0"
                                 type="button">Get
                                 Started</button>
                         </div>
@@ -86,7 +86,7 @@
                             <p>It is a long established fact that a reader will be distracted by the
                                 readable content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-2 px-4"
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-lg-2 px-4 my-0"
                                 type="button">Get
                                 Started</button>
                         </div>
@@ -97,7 +97,7 @@
                             <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
-                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-2 px-4"
+                            <button class="btn btn-lg btn-info text-white fw-normal rounded-1 my-lg-2 px-4 my-0"
                                 type="button">Get
                                 Started</button>
                         </div>
